--- a/about/index.html
+++ b/about/index.html
@@ -9,6 +9,12 @@ itinerary:
     - [9-15 June, "&nbsp&nbspMeditation retreat"]
     - [16 -22 June, "&nbsp&nbspReturn to local Temple or disrobing"]
 ---
+<div class="container" style="padding-top: 60px">
+  {% capture alert_content %}
+  The deadline for signing up to the 2025 ordination program ends on 24th May. <a href="{{ "/sign-up/" | relative_url }}" class="alert-link">Click here</a> to sign up now.
+  {% endcapture %}
+  {% include alert.html content=alert_content %}
+</div>
 <div id="index-header"></div>
 <div class="container">
   <p class="lead mt-5">
@@ -30,14 +36,6 @@ itinerary:
     2<sup>nd</sup>-22<sup>nd</sup> June 2025.
   </p>
   {% include table.html table=page.itinerary %}
-  <p class="mt-3">
-    Learn more about the 2025 ordination program by registering <a href="https://forms.gle/e3frRmuFayxWxPnH8">here</a>
-    for an online information evening (link to join the meeting is at the top of the form).
-  </p>
-  <p>
-    The online information evenings are held by Lp Note and Lp Sander, and take place on Saturday 25th January, and Friday 28th
-    March between 19:30 to 20:30 CET (or 18:30-19:30 UK time), where anyone can ask questions they might have about the program.
-  </p>
   <p class="mt-3">
     Latest news and announcements can be found on our
     <a href="https://chat.whatsapp.com/KVo372q1OoPFKYfjVtVU6T">Whatsapp group</a>
