--- a/about/index.html
+++ b/about/index.html
@@ -4,10 +4,10 @@ layout: base
 itinerary:
   headers: [Date, "&nbsp&nbspActivity"]
   rows:
-    - [2 June, "&nbsp&nbspRegistration"]
-    - [8 June, "&nbsp&nbspOrdination day"]
-    - [9-15 June, "&nbsp&nbspMeditation retreat"]
-    - [16 -22 June, "&nbsp&nbspReturn to local Temple or disrobing"]
+    - [14 June, "&nbsp&nbspRegistration"]
+    - [21 June, "&nbsp&nbspOrdination day"]
+    - [22-28 June, "&nbsp&nbspMeditation retreat"]
+    - [29-5 July, "&nbsp&nbspReturn to local Temple or disrobing"]
 ---
 <div id="index-header"></div>
 <div class="container">
@@ -26,8 +26,8 @@ itinerary:
   </p>
   <h1 class="text-center mt-5">Latest news and announcements</h1>
   <p>
-    The ordination program for 2025 will be held in in Wat Phra Dhammakaya London, between
-    2<sup>nd</sup>-22<sup>nd</sup> June 2025.
+    The ordination program for 2026 will be held in in Wat Phra Dhammakaya London, between
+    14<sup>th</sup>-5<sup>th</sup> July 2026.
   </p>
   {% include table.html table=page.itinerary %}
   <p class="mt-3">
