Remove mailing list + copy changes

--- a/about/index.html
+++ b/about/index.html
@@ -6,8 +6,8 @@ itinerary:
   rows:
     - [14 June, "&nbsp&nbspRegistration"]
     - [21 June, "&nbsp&nbspOrdination day"]
-    - [22-28 June, "&nbsp&nbspMeditation retreat"]
-    - [29-5 July, "&nbsp&nbspReturn to local Temple or disrobing"]
+    - [22-28 June, "&nbsp&nbspTrainings as a monk"]
+    - [29-5 July, "&nbsp&nbspRetreat at Wat Phra Dhammakaya Rheinland"]
 ---
 <div id="index-header"></div>
 <div class="container">
@@ -73,7 +73,7 @@ itinerary:
     Qualifications for those who would like to join the program are:
   </p>
   <ol>
-    <li>Male between 20-60 years old</li>
+    <li>Male between 18-65 years old</li>
     <li>A person with acceptable good behaviour as observed and can be attested to by their peers</li>
     <li>A person who lives a simple life, has good health, has no contagious diseases, mental illnesses, or physical
       impairments.
