--- a/about/index.html
+++ b/about/index.html
@@ -26,7 +26,7 @@ itinerary:
   </p>
   <h1 class="text-center mt-5">Latest news and announcements</h1>
   <p>
-    The ordination program for 2026 will be held in in Wat Phra Dhammakaya London, between
+    The ordination program for 2026 will be held in in Wat Phra Dhammakaya Belgium, between
     14<sup>th</sup>-5<sup>th</sup> July 2026.
   </p>
   {% include table.html table=page.itinerary %}
@@ -62,9 +62,7 @@ itinerary:
   </p>
   <p>
     We therefore would like to invite all qualified persons for The Theravada-Monk Ordination to join the EOP again this
-    year. Latest news, announcements, and more information about The EOP is available at all EU branches of Wat Phra
-    Dhammakaya, and can also be found on our facebook group
-    <a href="https://www.facebook.com/groups/EOPBenelux">https://www.facebook.com/groups/EOPBenelux</a>.
+    year.
   </p>
   <h2>
     Registration
@@ -110,8 +108,8 @@ itinerary:
   </p>
   <h2>Location</h2>
   <p>
-    The ordination program for 2025 will be held in in Wat Phra Dhammakaya London, between
-    2<sup>nd</sup>-22<sup>nd</sup> June 2025.
+    The ordination program for 2025 will be held in in Wat Phra Dhammakaya Belgium, between
+    14<sup>th</sup>-5<sup>th</sup> July 2026.
   </p>
   <h2>Things to do before your arrival</h2>
   <p>
