add 2026 ordination dates

--- a/about/index.html
+++ b/about/index.html
@@ -4,10 +4,11 @@ layout: base
 itinerary:
   headers: [Date, "&nbsp&nbspActivity"]
   rows:
-    - [14 June, "&nbsp&nbspRegistration"]
-    - [21 June, "&nbsp&nbspOrdination day"]
-    - [22-28 June, "&nbsp&nbspTrainings as a monk"]
-    - [29-5 July, "&nbsp&nbspRetreat at Wat Phra Dhammakaya Rheinland"]
+    - [8-13 June, "&nbsp&nbspRegistration and first week of training"]
+    - [14 June, "&nbsp&nbspOrdination day"]
+    - [15-21 June, "&nbsp&nbspTraining in the monk's life"]
+    - [22-28 June, "&nbsp&nbspRetreat in Ingelheim am Rhein, Germany (optional)"]
+    - [29 June onwards, "&nbsp&nbspLocal temple stay or in Belgium dependent on assessment (optional)"]
 ---
 <div id="index-header"></div>
 <div class="container">
@@ -24,6 +25,12 @@ itinerary:
     The Dhammakaya Foundation is a non-profit organisation, based on personal development, aiming to promote activities
     for the restoration of morality in individuals, families, societies, and the world.
   </p>
+  <h1 class="text-center mt-5">Latest news and announcements</h1>
+  <p>
+    The ordination program for 2026 will be held in in Wat Phra Dhammakaya Belgium, between
+    8<sup>th</sup>-28<sup>th</sup> June 2026.
+  </p>
+  {% include table.html table=page.itinerary %}
   <h1 class="text-center mt-5">What is the European Ordination Program?</h1>
   <p>
     The European Ordination Program (EOP) has been established by the vision of Luang Por Dhammajayo, the Abbot of Wat
