fix register button

--- a/about/index.html
+++ b/about/index.html
@@ -123,7 +123,14 @@ itinerary:
   <p>
     Click on the registration button below and fill out the form to join the ordination program
   </p>
-  <a class="btn btn-primary" href="{{ "/sign-up/" | relative_url }}">Register</a>
+  <a class="btn btn-primary d-inline-flex" href="https://forms.gle/KxcHbeLUMkrtbVQ68" target="_blank" rel="noopener noreferrer">
+    Register
+    &nbsp;
+    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-box-arrow-up-right" viewBox="0 0 16 16">
+      <path fill-rule="evenodd" d="M8.636 3.5a.5.5 0 0 0-.5-.5H1.5A1.5 1.5 0 0 0 0 4.5v10A1.5 1.5 0 0 0 1.5 16h10a1.5 1.5 0 0 0 1.5-1.5V7.864a.5.5 0 0 0-1 0V14.5a.5.5 0 0 1-.5.5h-10a.5.5 0 0 1-.5-.5v-10a.5.5 0 0 1 .5-.5h6.636a.5.5 0 0 0 .5-.5"/>
+      <path fill-rule="evenodd" d="M16 .5a.5.5 0 0 0-.5-.5h-5a.5.5 0 0 0 0 1h3.793L6.146 9.146a.5.5 0 1 0 .708.708L15 1.707V5.5a.5.5 0 0 0 1 0z"/>
+    </svg>
+  </a>
   <h1 class="text-center mt-5">European Ordination Program 2023</h1>
   <p>
     Between 8<sup>th</sup>-30<sup>th</sup> July 2023, the ninth batch of EOP was ordinated at Wat Phra Dhammakaya
