--- a/about/index.html
+++ b/about/index.html
@@ -27,8 +27,7 @@ itinerary:
   </p>
   <h1 class="text-center mt-5">Latest news and announcements</h1>
   <p>
-    The ordination program for 2026 will be held in in Wat Phra Dhammakaya Belgium, between
-    8<sup>th</sup>-28<sup>th</sup> June 2026.
+    {% include location.html %}
   </p>
   {% include table.html table=page.itinerary %}
   <h1 class="text-center mt-5">What is the European Ordination Program?</h1>
@@ -101,16 +100,15 @@ itinerary:
     <li>No music players, CD's, or radios</li>
   </ul>
   <p>
-    Thank you for your interest in The EOP and we look forward to your participation
+    Thank you for your interest in The EOP and we look forward to your participation.
   </p>
   <h2>Location</h2>
   <p>
-    The ordination program for 2025 will be held in in Wat Phra Dhammakaya Belgium, between
-    14<sup>th</sup>-5<sup>th</sup> July 2026.
+    {% include location.html %}
   </p>
   <h2>Things to do before your arrival</h2>
   <p>
-    You will need to memorise some text for the ordination ceremony
+    You will need to memorise some text for the ordination ceremony:
   </p>
   <ul>
     <li><a href="{{ "/assets/docs/ordination-chanting.pdf" | relative_url }}">Download chanting texts</a></li>
@@ -121,10 +119,10 @@ itinerary:
   </ul>
   <h2>How do I join?</h2>
   <p>
-    Click on the registration button below and fill out the form to join the ordination program
+    Click on the button below and fill out the form to apply for the ordination program.
   </p>
   <a class="btn btn-primary d-inline-flex" href="https://forms.gle/KxcHbeLUMkrtbVQ68" target="_blank" rel="noopener noreferrer">
-    Register
+    Apply
     &nbsp;
     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-box-arrow-up-right" viewBox="0 0 16 16">
       <path fill-rule="evenodd" d="M8.636 3.5a.5.5 0 0 0-.5-.5H1.5A1.5 1.5 0 0 0 0 4.5v10A1.5 1.5 0 0 0 1.5 16h10a1.5 1.5 0 0 0 1.5-1.5V7.864a.5.5 0 0 0-1 0V14.5a.5.5 0 0 1-.5.5h-10a.5.5 0 0 1-.5-.5v-10a.5.5 0 0 1 .5-.5h6.636a.5.5 0 0 0 .5-.5"/>
