consolidate apply link; add call to action to index page; tweak program details content;

--- a/about/index.html
+++ b/about/index.html
@@ -33,18 +33,18 @@ itinerary:
   <h1 class="text-center mt-5">What is the European Ordination Program?</h1>
   <p>
     The European Ordination Program (EOP) has been established by the vision of Luang Por Dhammajayo, the Abbot of Wat
-    Phra Dhammakaya, to introduce Buddhism to the people in The European Union (EU), and others around the world. The
-    program was organized for the first time in 2013 at Wat Phra Dhammakaya Benelux, Belgium. Many participants in The
-    EU from different countries such a England, Belgium, France, Germany, Sweden, Denmark, The Netherlands, Italy,
+    Phra Dhammakaya, to introduce Buddhism to the people in Europe, and others around the world. The
+    program was organized for the first time in 2013 at Wat Phra Dhammakaya Belgium. Many participants in Europe
+    from different countries such as England, Belgium, France, Germany, Sweden, Denmark, The Netherlands, Italy,
     Malta, Austria, and Switzerland joined the program. When it concluded, all were very satisfied with the program,
-    and some even had the intention to join the same kind of program again the following year.
+    and many had the intention to join the same program again the following year.
   </p>
   <p>
-    The European committee, consisting of 29 branches of Wat Phra Dhammakaya in The EU then decided to organise the
-    program every year. Subsequently, more and more participants in The EU have joined the EOP.
+    The European committee, consisting of 29 branches of Wat Phra Dhammakaya decided to organise the program every year.
+    Subsequently, more and more participants in Europe have joined and participated in the EOP.
   </p>
   <p>
-    The EOP provides the opportunity for all the qualified persons in The EU who have interest in studying the Dhamma
+    The EOP provides the opportunity for all qualified persons in Europe who have interest in studying the Dhamma
     of the Buddha, to use the knowledge they learn and practice from the program to benefit their lives with more
     happiness and prosperity.
   </p>
@@ -121,7 +121,7 @@ itinerary:
   <p>
     Click on the button below and fill out the form to apply for the ordination program.
   </p>
-  <a class="btn btn-primary d-inline-flex" href="https://forms.gle/KxcHbeLUMkrtbVQ68" target="_blank" rel="noopener noreferrer">
+  <a class="btn btn-primary d-inline-flex" href="{{ site.form_link }}" target="_blank" rel="noopener noreferrer">
     Apply
     &nbsp;
     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-box-arrow-up-right" viewBox="0 0 16 16">
