--- a/index.html
+++ b/index.html
@@ -5,16 +5,26 @@ layout: base
 <div class="container">
   <div class="min-vh-100 d-flex flex-column">
     <div class="row flex-grow-1" id="choosing-the-monastic-life">
-      <div class="col-12 col-md-5 d-flex align-items-end align-items-md-center">
+      <div class="col-12 col-md-6 col-lg-5 d-flex align-items-end align-items-md-center">
         <img src="{{ "assets/images/Mass-Ordination-4.webp" | relative_url }}" class="img-fluid rounded mx-auto d-block shadow opacity-75 z-n1" alt="...">
       </div>
-      <div class="col-12 col-md-7 d-flex flex-column justify-content-center">
+      <div class="col-12 col-md-6 col-lg-7 d-flex flex-column justify-content-center">
         <div class="display-3">
           Choosing the monastic life
         </div>
         <p>
           Why were we born? What is our purpose in life? How do we attain Happiness in life? What did the Buddha teach?
         </p>
+        <div>
+          <a class="btn btn-primary d-inline-flex align-items-baseline" href="{{ site.form_link }}" target="_blank" rel="noopener noreferrer">
+            Apply now
+            &nbsp;
+            <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" class="bi bi-box-arrow-up-right" viewBox="0 0 16 16">
+              <path fill-rule="evenodd" d="M8.636 3.5a.5.5 0 0 0-.5-.5H1.5A1.5 1.5 0 0 0 0 4.5v10A1.5 1.5 0 0 0 1.5 16h10a1.5 1.5 0 0 0 1.5-1.5V7.864a.5.5 0 0 0-1 0V14.5a.5.5 0 0 1-.5.5h-10a.5.5 0 0 1-.5-.5v-10a.5.5 0 0 1 .5-.5h6.636a.5.5 0 0 0 .5-.5"/>
+              <path fill-rule="evenodd" d="M16 .5a.5.5 0 0 0-.5-.5h-5a.5.5 0 0 0 0 1h3.793L6.146 9.146a.5.5 0 1 0 .708.708L15 1.707V5.5a.5.5 0 0 0 1 0z"/>
+            </svg>
+          </a>
+        </div>
       </div>
     </div>
     {% include next-section-link.html link-href="#path-of-ordination" link-text="The path of ordination" %}
@@ -48,9 +58,21 @@ layout: base
     {% include next-section-link.html link-href="#benefits" link-text="Benefits" %}
   </div>
   <div class="min-vh-100 d-flex flex-column">
+    {% capture extra_xs_content %}
+    <div class="my-2 text-center">
+      <a class="btn btn-primary" href="{{ "/about" | relative_url }}">Find out more</a>
+    </div>
+    {% endcapture %}
+    {% capture extra_md_content %}
+    <div class="my-2">
+      <a class="btn btn-primary" href="{{ "/about" | relative_url }}">Find out more</a>
+    </div>
+    {% endcapture %}
     {% include index-title-video.html id="benefits"
                                       src="https://www.youtube-nocookie.com/embed/G7s6eyVNwkw"
                                       title="Stress and how meditation can relieve it"
+                                      extra_xs_content=extra_xs_content
+                                      extra_md_content=extra_md_content
     %}
     <div class="row text-center flex-grow-0">
       <a href="#choosing-the-monastic-life" class="link-underline link-underline-opacity-0 py-2 lead">
