--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@ layout: base
               <path fill-rule="evenodd" d="M16 .5a.5.5 0 0 0-.5-.5h-5a.5.5 0 0 0 0 1h3.793L6.146 9.146a.5.5 0 1 0 .708.708L15 1.707V5.5a.5.5 0 0 0 1 0z"/>
             </svg>
           </a>
+          <a class="btn btn-primary" href="{{ "/about" | relative_url }}">Find out more</a>
         </div>
       </div>
     </div>
@@ -65,6 +66,14 @@ layout: base
     {% endcapture %}
     {% capture extra_md_content %}
     <div class="my-2">
+      <a class="btn btn-primary d-inline-flex align-items-baseline" href="{{ site.form_link }}" target="_blank" rel="noopener noreferrer">
+        Apply now
+        &nbsp;
+        <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" class="bi bi-box-arrow-up-right" viewBox="0 0 16 16">
+          <path fill-rule="evenodd" d="M8.636 3.5a.5.5 0 0 0-.5-.5H1.5A1.5 1.5 0 0 0 0 4.5v10A1.5 1.5 0 0 0 1.5 16h10a1.5 1.5 0 0 0 1.5-1.5V7.864a.5.5 0 0 0-1 0V14.5a.5.5 0 0 1-.5.5h-10a.5.5 0 0 1-.5-.5v-10a.5.5 0 0 1 .5-.5h6.636a.5.5 0 0 0 .5-.5"/>
+          <path fill-rule="evenodd" d="M16 .5a.5.5 0 0 0-.5-.5h-5a.5.5 0 0 0 0 1h3.793L6.146 9.146a.5.5 0 1 0 .708.708L15 1.707V5.5a.5.5 0 0 0 1 0z"/>
+        </svg>
+      </a>
       <a class="btn btn-primary" href="{{ "/about" | relative_url }}">Find out more</a>
     </div>
     {% endcapture %}
