add dropdown so we can add more categories on the page (or even new pages)

--- a/about/index.html
+++ b/about/index.html
@@ -25,11 +25,13 @@ itinerary:
     The Dhammakaya Foundation is a non-profit organisation, based on personal development, aiming to promote activities
     for the restoration of morality in individuals, families, societies, and the world.
   </p>
+  <div id="program-details--latest-news" class="offset-anchor-for-fixed-nav"></div>
   <h1 class="text-center mt-5">Latest news and announcements</h1>
   <p>
     {% include location.html %}
   </p>
   {% include table.html table=page.itinerary %}
+  <div id="program-details--what-is-the-eop" class="offset-anchor-for-fixed-nav"></div>
   <h1 class="text-center mt-5">What is the European Ordination Program?</h1>
   <p>
     The European Ordination Program (EOP) has been established by the vision of Luang Por Dhammajayo, the Abbot of Wat
@@ -129,6 +131,7 @@ itinerary:
       <path fill-rule="evenodd" d="M16 .5a.5.5 0 0 0-.5-.5h-5a.5.5 0 0 0 0 1h3.793L6.146 9.146a.5.5 0 1 0 .708.708L15 1.707V5.5a.5.5 0 0 0 1 0z"/>
     </svg>
   </a>
+  <div id="program-details--temples-in-europe" class="offset-anchor-for-fixed-nav"></div>
   <h1 class="text-center mt-5">Temples in Europe</h1>
   <div class="row">
     <div class="col-12 px-3"><h4 class="mb-0">🇦🇹 Austria</h4></div>
