--- a/media/index.html
+++ b/media/index.html
@@ -78,8 +78,8 @@ images:
     - assets/images/2019/misc/9.jpg
     - assets/images/2019/misc/10.jpg
 ---
-<div class="container">
-  <h1 class="display-2 mt-5">
+<div class="container mt-5">
+  <h1 class="display-2 pt-5">
     European Ordination Program 2024
   </h1>
   <p>
