add information evenings

--- a/about/index.html
+++ b/about/index.html
@@ -1,5 +1,5 @@
 ---
-title: About - European Ordination Program
+title: Program details - European Ordination Program
 layout: base
 itinerary:
   headers: [Date, "&nbsp&nbspActivity"]
@@ -31,6 +31,33 @@ itinerary:
     {% include location.html %}
   </p>
   {% include table.html table=page.itinerary %}
+  <h5 class="mt-5">Information Evenings for the 11th European Ordination Program</h5>
+  <p>
+    <a href="https://forms.gle/e3frRmuFayxWxPnH8">Click this link to register for the information evenings</a>.
+    Please note that the link is on the top of the form!
+  </p>
+  <p>
+    We warmly invite you to join one (or both) of our upcoming information evenings to learn more about the ordination
+    program and have all your questions answered.
+  </p>
+  <p>
+    <b>Dates:</b> Saturday 21 March 2026 and/or Saturday 11 April 2026<br>
+    <b>Time:</b> 7:00 to 8:00PM CET
+  </p>
+  <p>
+    During the sessions we will provide you with more information about the program schedule and structure,
+    participation requirements and preparation, and there is also an opportunity to rehearse ordination chanting.
+  </p>
+  <p>
+    The information evenings will be hosted by experienced teachers, Lp Pisit, Lp Sander, and former program participant,
+    Heiko. Attending one information evening is usually sufficient, but you are very welcome to join both if you would like.
+    These sessions provide a relaxed and open space to explore the program and connect with the teaching team.
+    We look forward to meeting you there!
+  </p>
+  <p>
+    You can register for the evenings <a href="https://forms.gle/e3frRmuFayxWxPnH8">here</a>.
+    <b>Please note that the Zoom link is at the top of the application form.</b>
+  </p>
   <div id="program-details--what-is-the-eop" class="offset-anchor-for-fixed-nav"></div>
   <h1 class="text-center mt-5">What is the European Ordination Program?</h1>
   <p>
