add eop spot video on index page

--- a/index.html
+++ b/index.html
@@ -59,8 +59,25 @@ layout: base
     {% include next-section-link.html link-href="#benefits" link-text="Benefits" %}
   </div>
   <div class="min-vh-100 d-flex flex-column">
+    {% include index-title-video.html id="benefits"
+                                      src="https://www.youtube-nocookie.com/embed/G7s6eyVNwkw"
+                                      title="Stress and how meditation can relieve it"
+                                      extra_xs_content=extra_xs_content
+                                      extra_md_content=extra_md_content
+    %}
+    {% include next-section-link.html link-href="#eop" link-text="European Ordination Program" %}
+  </div>
+  <div class="min-vh-100 d-flex flex-column">
     {% capture extra_xs_content %}
     <div class="my-2 text-center">
+      <a class="btn btn-primary d-inline-flex align-items-baseline" href="{{ site.form_link }}" target="_blank" rel="noopener noreferrer">
+        Apply now
+        &nbsp;
+        <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" class="bi bi-box-arrow-up-right" viewBox="0 0 16 16">
+          <path fill-rule="evenodd" d="M8.636 3.5a.5.5 0 0 0-.5-.5H1.5A1.5 1.5 0 0 0 0 4.5v10A1.5 1.5 0 0 0 1.5 16h10a1.5 1.5 0 0 0 1.5-1.5V7.864a.5.5 0 0 0-1 0V14.5a.5.5 0 0 1-.5.5h-10a.5.5 0 0 1-.5-.5v-10a.5.5 0 0 1 .5-.5h6.636a.5.5 0 0 0 .5-.5"/>
+          <path fill-rule="evenodd" d="M16 .5a.5.5 0 0 0-.5-.5h-5a.5.5 0 0 0 0 1h3.793L6.146 9.146a.5.5 0 1 0 .708.708L15 1.707V5.5a.5.5 0 0 0 1 0z"/>
+        </svg>
+      </a>
       <a class="btn btn-primary" href="{{ "/about" | relative_url }}">Find out more</a>
     </div>
     {% endcapture %}
@@ -77,9 +94,9 @@ layout: base
       <a class="btn btn-primary" href="{{ "/about" | relative_url }}">Find out more</a>
     </div>
     {% endcapture %}
-    {% include index-title-video.html id="benefits"
-                                      src="https://www.youtube-nocookie.com/embed/G7s6eyVNwkw"
-                                      title="Stress and how meditation can relieve it"
+    {% include index-video-title.html id="eop"
+                                      src="https://www.youtube-nocookie.com/embed/YnYkqjQ1iLE?si=Np-gtirxS9jFo_eh"
+                                      title="European Ordination Program"
                                       extra_xs_content=extra_xs_content
                                       extra_md_content=extra_md_content
     %}
